# ranwen-bot-rewrited

./: .gitignore  main.py  pyproject.toml
ranwen_bot/: __init__.py  bot.py  bot_base.py  i18n.py  messages.py  py.typed
ranwen_bot/exceptions/: DeveloperError.py  __init__.py
tests/: __init__.py  test_exception.py  test_help_message.py  test_i18n.py  test_messages.py
typings/aiogram/: __init__.pyi  __main__.pyi
typings/aiogram/bot/: __init__.pyi  api.pyi  base.pyi  bot.pyi
typings/aiogram/dispatcher/: __init__.pyi  dispatcher.pyi  handler.pyi  middlewares.pyi  storage.pyi  webhook.pyi
typings/aiogram/dispatcher/filters/: __init__.pyi  builtin.pyi  factory.pyi  filters.pyi  state.pyi
typings/aiogram/types/: __init__.pyi  auth_widget_data.pyi  base.pyi  callback_query.pyi  chat.pyi  chat_member.pyi  chat_permissions.pyi  chat_photo.pyi  contact.pyi  dice.pyi  document.pyi  encrypted_passport_element.pyi  fields.pyi  force_reply.pyi  game.pyi  inline_keyboard.pyi  inline_query.pyi  inline_query_result.pyi  input_file.pyi  input_media.pyi  input_message_content.pyi  location.pyi  message.pyi  message_entity.pyi  mixins.pyi  passport_data.pyi  passport_element_error.pyi  poll.pyi  reply_keyboard.pyi  shipping_option.pyi  sticker.pyi  sticker_set.pyi  update.pyi  user.pyi  user_profile_photos.pyi  webhook_info.pyi
typings/aiogram/utils/: deep_linking.pyi  deprecated.pyi  exceptions.pyi  executor.pyi  helper.pyi  json.pyi  markdown.pyi  mixins.pyi  payload.pyi  text_decorations.pyi
